<resources>
    <string name="app_name">FinalProject</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="or">OR</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="return_to_login">Return to Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="send_password_verification">Send Password Verification</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="title_activity_course_dashboard">CourseDashboardActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="add_response">Add Response</string>
    <string name="forum_post_title">Forum Post Title</string>
    <string name="forum_post_body">Forum Post Body</string>
    <string name="post_announcement">Post Announcement</string>
    <string name="forum_post_response">Forum Post Response</string>
    <string name="post_response">Post Response</string>
    <string name="announcement_body">Announcement Body</string>
    <string name="university_name">University Name</string>
    <string name="course_title">Course Title</string>
    <string name="course_section">Course Section</string>
    <string name="course_year">Course Year</string>
    <string name="course_term">Course Term</string>
    <string name="register_course_key">Register Course Key</string>
    <string name="create_course">Create Course</string>
    <string name="you_are_not_enrolled_in_any_classes">You are not enrolled in any classes!</string>
    <string name="register_a_course">Register A Course</string>
    <string name="no_announcements_to_show">No announcements to show!</string>
    <string name="no_forum_posts_to_show">No forum posts to show!</string>
    <string name="create_forum_post">Create Forum Post</string>
</resources>
